# llm

./: CMakeLists.txt  README.md
src/: main.cpp
src/AI/: LLM.hpp
src/Helper/: Json.hpp
src/Struct/: LLMData.hpp
